	* projects/webservice/conf/project.xml.in: 
	* projects/skel/projects/common/conf/pustefix.xml: 
	* projects/skel/projects/servletconf/projects.xml.in: 
	Removed editor servlet from project configurations. The editor's session 
	id is now stored in a cookie and all applications share the same editor
	instance. The editor URL can be configured using a property in pustefix.xml. 

2008-04-10  jtl  <jtl@schlund.de>

	* projects/core/schema/properties200401.xsd: maybe I was able to change the schema according to my latest changes...
	Someone should better check this.

2008-04-09  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixxml/config/impl/PagerequestRule.java (end): makes sure to check the referenced wrappers in actions 
	against the defined wrappers
	
	* src/de/schlund/pfixxml/config/impl/ProcessActionWrapperRule.java: 
	* src/de/schlund/pfixxml/config/impl/ProcessActionRule.java: 
	* src/de/schlund/pfixxml/config/impl/ProcessActionConfigImpl.java: 
	* src/de/schlund/pfixxml/config/ProcessActionConfig.java: new classes. Holds configuration data for a process action
	and the needed rules for the digester.
	
	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java: attach the action rules to the digester
	
	* src/de/schlund/pfixxml/config/impl/PageRequestConfigImpl.java (getProcessActions): 
	(addProcessAction): 
	* src/de/schlund/pfixxml/config/PageRequestConfig.java (getProcessActions): add a way to store and access process
	actions to the pagerequest configuration
	
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: add another core parameter __action. 
	(handleRequestWorker): mostly commented out stuff that will soon (after refactoring) allow to also set
	pageflow, forcestop, jumptopage(-flow) via an action definition
		
	* src/de/schlund/pfixcore/workflow/app/IWrapperContainer.java (retrieveCurrentStatus): 
	* src/de/schlund/pfixcore/workflow/app/IWrapperContainerImpl.java (retrieveCurrentStatus): add a boolean parameter