@@ -79,6 +79,11 @@
 	id is now stored in a cookie and all applications share the same editor
 	instance. The editor URL can be configured using a property in pustefix.xml. 
 
+2008-04-15  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/auth/AuthenticationImpl.java: Log hasRole() calls
+	for role names which don't exist/aren't defined in the context configuration.
+
 2008-04-10  jtl  <jtl@schlund.de>
 
 	* projects/core/schema/properties200401.xsd: maybe I was able to change the schema according to my latest changes...
